--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96d072">  <td>23/07/28 13:56:43</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@65c7a252]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>23/07/28 13:56:54</td>   <td>11470</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@65c7a252]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>23/07/28 13:56:54</td>   <td>11469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@65c7a252]">&lt;&lt;AM</td> 
-<td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>23/07/28 13:56:44</td>   <td>1336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@65c7a252]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>23/07/28 13:56:54</td>   <td>11488</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@65c7a252]">&lt;&lt;AS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="85ff7e">  <td>23/07/28 13:56:45</td>   <td>2948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMultipleProductsToCartandValidateTest.addMultipleProductsToCartandValidateTest()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@65c7a252]">addMultipleProductsToCartandValidateTest</td> 
-  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>23/07/28 13:56:43</td>   <td>-7</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@65c7a252]">&gt;&gt;BS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
+<tr bgcolor="a6a26d">  <td>23/09/17 15:46:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductSerchandtransfertoexcelsheettest.productSerchandtransfertoexcelsheettest(java.lang.String)[pri:0, instance:Amazon.ProductSerchandtransfertoexcelsheettest@4a003cbe]">productSerchandtransfertoexcelsheettest</td> 
+  <td>main@1572256205</td>   <td></td> </tr>
+<tr bgcolor="a18c68">  <td>23/09/17 15:46:43</td>   <td>-6581</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:Amazon.ProductSerchandtransfertoexcelsheettest@4a003cbe]">&gt;&gt;BS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1572256205</td>   <td></td> </tr>
+<tr bgcolor="a18c68">  <td>23/09/17 15:47:00</td>   <td>10352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.ProductSerchandtransfertoexcelsheettest@4a003cbe]">&lt;&lt;AM</td> 
+<td>&nbsp;</td>  <td>main@1572256205</td>   <td></td> </tr>
+<tr bgcolor="a18c68">  <td>23/09/17 15:47:00</td>   <td>10379</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:Amazon.ProductSerchandtransfertoexcelsheettest@4a003cbe]">&lt;&lt;AS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1572256205</td>   <td></td> </tr>
+<tr bgcolor="a18c68">  <td>23/09/17 15:47:00</td>   <td>10354</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:Amazon.ProductSerchandtransfertoexcelsheettest@4a003cbe]">&lt;&lt;AC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1572256205</td>   <td></td> </tr>
+<tr bgcolor="a18c68">  <td>23/09/17 15:46:43</td>   <td>-6570</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:Amazon.ProductSerchandtransfertoexcelsheettest@4a003cbe]">&gt;&gt;BC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1572256205</td>   <td></td> </tr>
+<tr bgcolor="a18c68">  <td>23/09/17 15:46:47</td>   <td>-2415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.ProductSerchandtransfertoexcelsheettest@4a003cbe]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>main@1572256205</td>   <td></td> </tr>
 </table>
