--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,48 @@
-<h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4686afc2]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1396431506</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:43</td>   <td>-463</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@17f62e33]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@633240419</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:43</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4686afc2]">&lt;&lt;AM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1396431506</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:43</td>   <td>-465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@17f62e33]">&lt;&lt;AM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@633240419</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:43</td>   <td>24</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@17f62e33]">&lt;&lt;AS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1528923159</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:36</td>   <td>-7759</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4686afc2]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1396431506</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:36</td>   <td>-7755</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@17f62e33]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@633240419</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:38</td>   <td>-5598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4686afc2]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1396431506</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:38</td>   <td>-5450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@17f62e33]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@633240419</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/07/24 15:43:36</td>   <td>-7779</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@17f62e33]">&gt;&gt;BS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1528923159</td>   <td></td> </tr>
-<tr bgcolor="a7bfbc">  <td>23/07/24 15:43:40</td>   <td>-3293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMultipleProductsToCartandValidateTest.addMultipleProductsToCartandValidateTest()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4686afc2]">addMultipleProductsToCartandValidateTest</td> 
-  <td>TestNG-tests-1@1396431506</td>   <td></td> </tr>
-<tr bgcolor="a7bfbc">  <td>23/07/24 15:43:41</td>   <td>-2930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMultipleProductsToCartandValidateTest.addMultipleProductsToCartandValidateTest()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@17f62e33]">addMultipleProductsToCartandValidateTest</td> 
-  <td>TestNG-tests-2@633240419</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">&lt;&lt;AM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">&lt;&lt;AM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">&lt;&lt;AM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:56</td>   <td>3337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">&lt;&lt;AM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:56</td>   <td>3337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">&lt;&lt;AM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:56</td>   <td>3337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">&lt;&lt;AM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:56</td>   <td>3360</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">&lt;&lt;AS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:45</td>   <td>-7434</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">&gt;&gt;BC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:52</td>   <td>83</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">&gt;&gt;BC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:52</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:52</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:52</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:56</td>   <td>3337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:56</td>   <td>3337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:56</td>   <td>3337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>23/09/26 20:57:45</td>   <td>-7445</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">&gt;&gt;BS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>23/09/26 20:57:52</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IterateTitlesExportExcelTest.iterateTitlesPricesExportExcelTest(java.lang.String)[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">iterateTitlesPricesExportExcelTest</td> 
+  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>23/09/26 20:57:52</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IterateTitlesExportExcelTest.iterateTitlesPricesExportExcelTest(java.lang.String)[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">iterateTitlesPricesExportExcelTest</td> 
+  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>23/09/26 20:57:52</td>   <td>-66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IterateTitlesExportExcelTest.iterateTitlesPricesExportExcelTest(java.lang.String)[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6440112d]">iterateTitlesPricesExportExcelTest</td> 
+  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>23/09/26 20:57:56</td>   <td>3328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IterateTitlesExportExcelTest.iterateTitlesPricesExportExcelTest(java.lang.String)[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">iterateTitlesPricesExportExcelTest</td> 
+  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>23/09/26 20:57:56</td>   <td>3328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IterateTitlesExportExcelTest.iterateTitlesPricesExportExcelTest(java.lang.String)[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">iterateTitlesPricesExportExcelTest</td> 
+  <td>main@2068598972</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>23/09/26 20:57:56</td>   <td>3328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IterateTitlesExportExcelTest.iterateTitlesPricesExportExcelTest(java.lang.String)[pri:0, instance:Amazon.IterateTitlesExportExcelTest@6b695b06]">iterateTitlesPricesExportExcelTest</td> 
+  <td>main@2068598972</td>   <td></td> </tr>
 </table>
