--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>Results for Suite</title>
+<title>Results for suite</title>
 <link href="../testng.css" rel="stylesheet" type="text/css" />
 <link href="../my-testng.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<h3><p align="center">Results for<br/><em>Suite</em></p></h3>
+<h3><p align="center">Results for<br/><em>suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
 <td>2 tests</td>
@@ -22,16 +22,16 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Testr (0/1/0)</td><td valign='top' align='right'>
-  <a href='Testr.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>t1 (0/1/2)</td><td valign='top' align='right'>
+  <a href='t1.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Testrun (0/1/0)</td><td valign='top' align='right'>
-  <a href='Testrun.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>t2 (0/1/2)</td><td valign='top' align='right'>
+  <a href='t2.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
